objects/Service_and_Demontration__c.object
<CustomObject>
    <fields>
        <fullName>ptt_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1.1 Ordered</fullName>
                </value>
                <value>
                    <fullName>1.2 Ordered by E-Mail</fullName>
                </value>
                <value>
                    <fullName>2. Assigned</fullName>
                </value>
                <value>
                    <fullName>3. Engineering</fullName>
                </value>
                <value>
                    <fullName>4. Documentation</fullName>
                </value>
                <value>
                    <fullName>5. Complete Invoice</fullName>
                </value>
                <value>
                    <fullName>6. Completed</fullName>
                </value>
                <value>
                    <fullName>7. Partial Invoice</fullName>
                </value>
                <value>
                    <fullName>8. Reporting Approval</fullName>
                </value>
                <value>
                    <fullName>9. On Hold - Waiting for Customer</fullName>
                </value>
                <value>
                    <fullName>0. Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ptt_Training_Updating_Certification__c</fullName>
        <label>Training Updating Certification</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ptt_Training_code__c</fullName>
        <description>Case C-00004322 https://pruftechnik.my.salesforce.com/500D000000IcdIu</description>
        <label>Training code</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ptt_Training_name__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>cod. 01-VIB</fullName>
                </value>
                <value>
                    <fullName>cod. 10S</fullName>
                </value>
                <value>
                    <fullName>cod. 15S</fullName>
                </value>
                <value>
                    <fullName>cod. 20S</fullName>
                </value>
                <value>
                    <fullName>cod. 30S</fullName>
                </value>
                <value>
                    <fullName>cod. 50S</fullName>
                </value>
                <value>
                    <fullName>cod. 60S</fullName>
                </value>
                <value>
                    <fullName>cod. 70S</fullName>
                </value>
                <value>
                    <fullName>cod. ALI 1</fullName>
                </value>
                <value>
                    <fullName>cod. ALI 2</fullName>
                </value>
                <value>
                    <fullName>cod. ARP CAT 1</fullName>
                </value>
                <value>
                    <fullName>cod. BIL</fullName>
                </value>
                <value>
                    <fullName>cod. CAT 1</fullName>
                </value>
                <value>
                    <fullName>cod. CAT 2</fullName>
                </value>
                <value>
                    <fullName>cod. CAT 3</fullName>
                </value>
                <value>
                    <fullName>cod. GEN</fullName>
                </value>
                <value>
                    <fullName>cod. MOT 1</fullName>
                </value>
                <value>
                    <fullName>cod. MOT 2</fullName>
                </value>
                <value>
                    <fullName>cod. OMT</fullName>
                </value>
                <value>
                    <fullName>cod. OPT</fullName>
                </value>
                <value>
                    <fullName>cod. ROT</fullName>
                </value>
                <value>
                    <fullName>cod. ULT</fullName>
                </value>
                <value>
                    <fullName>cod. VABB</fullName>
                </value>
                <value>
                    <fullName>cod. VBX</fullName>
                </value>
                <value>
                    <fullName>cod. VIB 1</fullName>
                </value>
                <value>
                    <fullName>cod. VIB 2</fullName>
                </value>
                <value>
                    <fullName>cod. VIB 3</fullName>
                </value>
                <value>
                    <fullName>cod. VIB 4</fullName>
                </value>
                <value>
                    <fullName>cod. VIB 5</fullName>
                </value>
                <value>
                    <fullName>EN: ALI1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ptt_Training_name__c</fullName>
        <description>C-00004322 https://pruftechnik.my.salesforce.com/500D000000IcdIu</description>
        <label>Training name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>EN - ALI10 Rotalign Ultra II</fullName>
                </value>
                <value>
                    <fullName>EN - ALI11 Rotalign Smart EX</fullName>
                </value>
                <value>
                    <fullName>EN - ALI12 Rotalign Pro</fullName>
                </value>
                <value>
                    <fullName>EN - ALI13 Rotalign Ultra iS</fullName>
                </value>
                <value>
                    <fullName>EN - ALI14 Levalign / Geometric</fullName>
                </value>
                <value>
                    <fullName>EN - ALI15 - Rotalign Touch</fullName>
                </value>
                <value>
                    <fullName>EN - ALI16 - Rotalign Smart RS5 EX</fullName>
                </value>
                <value>
                    <fullName>EN - ALI1 Optalign Plus</fullName>
                </value>
                <value>
                    <fullName>EN - ALI2 Optalign Smart</fullName>
                </value>
                <value>
                    <fullName>EN - ALI3 Optalign Smart EX</fullName>
                </value>
                <value>
                    <fullName>EN - ALI4 Optalign Smart RS5</fullName>
                </value>
                <value>
                    <fullName>EN - ALI5 Optalign Smart RS</fullName>
                </value>
                <value>
                    <fullName>EN - ALI6 Shaftalign</fullName>
                </value>
                <value>
                    <fullName>EN - ALI7 Shaftalign OS3</fullName>
                </value>
                <value>
                    <fullName>EN - ALI8  Aligneo</fullName>
                </value>
                <value>
                    <fullName>EN - ALI9 Rotalign Ultra I</fullName>
                </value>
                <value>
                    <fullName>EN - CM10 Vibnode</fullName>
                </value>
                <value>
                    <fullName>EN - CM11 Vibguard/Omnitrend Centre</fullName>
                </value>
                <value>
                    <fullName>EN - CM12 Vibxpert/Omnitrend Centre</fullName>
                </value>
                <value>
                    <fullName>EN - CM13 Signalmaster/Omnitrend Centre</fullName>
                </value>
                <value>
                    <fullName>EN - CM1 Condition Monitoring:</fullName>
                </value>
                <value>
                    <fullName>EN - CM2 Vibscanner / Omnitrend</fullName>
                </value>
                <value>
                    <fullName>EN - CM3 Vibxpert / Omnitrend</fullName>
                </value>
                <value>
                    <fullName>EN - CM4 FFT</fullName>
                </value>
                <value>
                    <fullName>EN - CM5 Vibxpert EX</fullName>
                </value>
                <value>
                    <fullName>EN - CM6 Vibxpert I</fullName>
                </value>
                <value>
                    <fullName>EN - CM7 Vibxpert II</fullName>
                </value>
                <value>
                    <fullName>EN - CM8 Vibscanner Balancing</fullName>
                </value>
                <value>
                    <fullName>EN - CM9 Omnitrend</fullName>
                </value>
                <value>
                    <fullName>Inhouse Seminar OPT smart</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ptt_Travel_hours__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Travel hours #</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sf42_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Customer.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Services &amp; Demos</relationshipLabel>
        <relationshipName>Services_and_Demontrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sf42_Contact2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contact at ordering Customer.</description>
        <inlineHelpText>Contact at ordering Customer.</inlineHelpText>
        <label>Contact Agent</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Services &amp; Demos (Agent)</relationshipLabel>
        <relationshipName>Services_Demos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sf42_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Contact at Customer.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Services &amp; Demos (Enduser)</relationshipLabel>
        <relationshipName>Services_and_Demontrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sf42_Date__c</fullName>
        <inlineHelpText>First day of the service.</inlineHelpText>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sf42_Engineer_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Service Engineer 1.</inlineHelpText>
        <label>Engineer 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Services_and_Demontrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sf42_Engineer_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Service Engineer 2.</inlineHelpText>
        <label>Engineer 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Services_and_Demontrations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sf42_Service_Type__c</fullName>
        <label>Service Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Demonstration</fullName>
                </value>
                <value>
                    <fullName>Drop By</fullName>
                </value>
                <value>
                    <fullName>Free service</fullName>
                </value>
                <value>
                    <fullName>Paid Service</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Web Demo</fullName>
                </value>
                <value>
                    <fullName>Webinar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sf42_de_Description__c</fullName>
        <inlineHelpText>Notes about the service.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sf42_de_Migration_ID__c</fullName>
        <externalId>true</externalId>
        <label>Migration ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_de_REF__c</fullName>
        <externalId>true</externalId>
        <label>REF</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_de_Start_Date__c</fullName>
        <inlineHelpText>When serviceman need to be on site?</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sf42_de_Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>PT - Services &amp; Demos</label>
    <listViews>
        <fullName>AllServicesAndDemos</fullName>
        <columns>NAME</columns>
        <columns>ptt_Account_from_contact_2__c</columns>
        <columns>sf42_Date__c</columns>
        <columns>sf42_Service_Type__c</columns>
        <columns>sf42_Engineer_1__c</columns>
        <columns>sf42_Engineer_2__c</columns>
        <columns>of_days__c</columns>
        <columns>Service__c</columns>
        <columns>Engineer_1_Text__c</columns>
        <columns>Engineer_2_Text__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Services &amp; Demos</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Services_Demos_and_Dropbys</fullName>
        <columns>NAME</columns>
        <columns>sf42_Account__c</columns>
        <columns>sf42_Service_Type__c</columns>
        <columns>sf42_Date__c</columns>
        <columns>of_days__c</columns>
        <columns>Service__c</columns>
        <columns>sf42_Engineer_1__c</columns>
        <columns>sf42_Engineer_2__c</columns>
        <columns>Engineer_1_Text__c</columns>
        <columns>Engineer_2_Text__c</columns>
        <filterScope>Everything</filterScope>
        <label>_All Services, Demos, and Dropbys</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>USAEmployee</roleAndSubordinates>
            <roleAndSubordinates>USAManagement</roleAndSubordinates>
            <roleAndSubordinates>USA_Service_Inc</roleAndSubordinates>
            <roleAndSubordinatesInternal>SingaporeEmployee</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>SingaporeManagement</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Drop_By_s</fullName>
        <columns>sf42_Engineer_1__c</columns>
        <columns>sf42_Engineer_2__c</columns>
        <columns>sf42_Date__c</columns>
        <columns>sf42_Account__c</columns>
        <columns>Service__c</columns>
        <columns>sf42_Service_Type__c</columns>
        <columns>of_days__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>sf42_Service_Type__c</field>
            <operation>equals</operation>
            <value>Drop By</value>
        </filters>
        <label>_All Drop By&apos;s</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>USAEmployee</roleAndSubordinates>
            <roleAndSubordinates>USAManagement</roleAndSubordinates>
            <roleAndSubordinates>USA_Service_Inc</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Golden_Triangle_SVs</fullName>
        <columns>NAME</columns>
        <columns>sf42_Account__c</columns>
        <columns>sf42_Service_Type__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>sf42_Date__c</columns>
        <columns>ptt_Account_State__c</columns>
        <columns>PT_Address__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ptt_Account_State__c</field>
            <operation>equals</operation>
            <value>NJ,RI,CT,MA,PA,VA,MD,DE</value>
        </filters>
        <filters>
            <field>sf42_Service_Type__c</field>
            <operation>equals</operation>
            <value>Demonstration,Drop By,Free service,Paid Service,Training,Web Demo,Webinar</value>
        </filters>
        <label>Golden Triangle SVs</label>
        <language>en_US</language>
        <sharedTo>
            <role>USAEmployee</role>
            <role>USAManagement</role>
            <role>USAexemployee</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Services_Demos</fullName>
        <columns>NAME</columns>
        <columns>sf42_Account__c</columns>
        <columns>sf42_Date__c</columns>
        <columns>of_days__c</columns>
        <columns>sf42_Service_Type__c</columns>
        <columns>ptt_Category__c</columns>
        <columns>sf42_Engineer_1__c</columns>
        <columns>sf42_Engineer_2__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Services &amp; Demos</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Paid_Service</fullName>
        <columns>sf42_Account__c</columns>
        <columns>sf42_Date__c</columns>
        <columns>sf42_Service_Type__c</columns>
        <columns>Service__c</columns>
        <columns>sf42_Engineer_1__c</columns>
        <columns>sf42_Engineer_2__c</columns>
        <columns>of_days__c</columns>
        <columns>Engineer_1_Text__c</columns>
        <columns>Engineer_2_Text__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>sf42_Service_Type__c</field>
            <operation>equals</operation>
            <value>Paid Service</value>
        </filters>
        <label>_All Paid Service</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>USAEmployee</roleAndSubordinates>
            <roleAndSubordinates>USAManagement</roleAndSubordinates>
            <roleAndSubordinates>USA_Service_Inc</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SDIC_TS_MC</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>ptt_Status__c</columns>
        <columns>sf42_Date__c</columns>
        <columns>sf42_Engineer_1__c</columns>
        <columns>ptt_Category__c</columns>
        <columns>sf42_Account__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ptt_CM__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>sf42_Date__c</field>
            <operation>greaterThan</operation>
            <value>1/1/2015</value>
        </filters>
        <label>SDIC/TS/MC</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>Germany</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SDIC_UK</fullName>
        <columns>ptt_Account_from_contact_2__c</columns>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>ptt_Opportunity__c</columns>
        <columns>Order_Processing__c</columns>
        <columns>sf42_Engineer_1__c</columns>
        <columns>sf42_Service_Type__c</columns>
        <columns>Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>SDIC UK</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>UK</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>UKManagement</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>UKMidMgmt</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>UK_Employee</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SV_w_o_Opp</fullName>
        <columns>NAME</columns>
        <columns>sf42_Account__c</columns>
        <columns>sf42_Date__c</columns>
        <columns>ptt_Opportunity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ptt_Opportunity__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>sf42_Service_Type__c</field>
            <operation>equals</operation>
            <value>Paid Service,Free service,Training</value>
        </filters>
        <label>__SV w/o Opp</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>USAEmployee</roleAndSubordinates>
            <roleAndSubordinates>USAManagement</roleAndSubordinates>
            <roleAndSubordinates>USA_Service_Inc</roleAndSubordinates>
            <roleAndSubordinates>USAexemployee</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>S_D_category_ALI_PARALIGN</fullName>
        <columns>NAME</columns>
        <columns>sf42_de_Description__c</columns>
        <columns>sf42_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>sf42_de_Subject__c</columns>
        <columns>ptt_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ptt_Category__c</field>
            <operation>equals</operation>
            <value>ALI - Paralign</value>
        </filters>
        <label>S&amp;D category ALI - PARALIGN</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>Belgium</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>BelgiumEmployee</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>BelgiumManagement</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Brazil</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>BrazilEmployee</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>BrazilManagement</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>CEO_North_America</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Canada</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>CanadaEmployee</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>CanadaManagement</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>China</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>ChinaEmployee</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>ChinaManagement</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>China_Division_Manager</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Dubai</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>DubaiEmployee</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>DubaiManagement</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>DubaiPartner</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>France</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>FranceEmployee</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>FranceManagement</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Germany</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>GermanyCMEmployee</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>GermanyCMManagement</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>GermanyNDTEmployee</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>GermanyNDTManagement</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Germany_Chatter_User</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Headquarters</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Italy</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>ItalyEmployee</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>ItalyManagement</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Japan</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>JapanEmployee</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>JapanManagement</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>North_America</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>PolandTechnology</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>PolandTechnologyEmployee</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>PolandTechnologyManagement</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>PolandWibrem</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>PolandWibremEmployee</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>PolandWibremManagement</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Russia</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>RussiaEmployee</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>RussiaManagement</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Singapore</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>SingaporeEmployee</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>SingaporeManagement</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Singapore_ex_employee</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Spain</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>SpainEmployee</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>SpainManagement</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>SpainTelemarketingoperator</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Turkey</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Turkey_Employee</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Turkey_Management</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>UK</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>UKManagement</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>UKMidMgmt</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>UK_Employee</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>USAEddytech</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>USAEddytechEmployee</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>USAEddytechManagement</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>USAEmployee</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>USAManagement</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>USA_PRUFTECHNIK_Inc</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>USA_PRUFTECHNIK_Inc_Employee</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>USA_PRUFTECHNIK_Inc_Management</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>USA_Service_Inc</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>USAexemployee</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X0_Performed_in_2011</fullName>
        <columns>sf42_Account__c</columns>
        <columns>NAME</columns>
        <columns>sf42_Date__c</columns>
        <columns>ptt_Opportunity__c</columns>
        <columns>Service__c</columns>
        <columns>sf42_Service_Type__c</columns>
        <columns>ptt_Machine_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>sf42_Date__c</field>
            <operation>greaterThan</operation>
            <value>1/1/2011</value>
        </filters>
        <filters>
            <field>sf42_Date__c</field>
            <operation>lessThan</operation>
            <value>12/31/2011</value>
        </filters>
        <filters>
            <field>sf42_Service_Type__c</field>
            <operation>equals</operation>
            <value>Paid Service,Free service</value>
        </filters>
        <label>2011 Services</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>USAEmployee</roleAndSubordinates>
            <roleAndSubordinates>USAManagement</roleAndSubordinates>
            <roleAndSubordinates>USA_Service_Inc</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X2004_2005_Services</fullName>
        <columns>sf42_Date__c</columns>
        <columns>sf42_Account__c</columns>
        <columns>NAME</columns>
        <columns>sf42_Service_Type__c</columns>
        <columns>ptt_Machine_Description__c</columns>
        <columns>ptt_Opportunity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>sf42_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2004</value>
        </filters>
        <filters>
            <field>sf42_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>12/31/2005</value>
        </filters>
        <filters>
            <field>sf42_Service_Type__c</field>
            <operation>equals</operation>
            <value>Paid Service,Free service</value>
        </filters>
        <label>2004 &amp; 2005 Services</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>USA_Service_Inc</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X2006_Services</fullName>
        <columns>sf42_Date__c</columns>
        <columns>sf42_Account__c</columns>
        <columns>NAME</columns>
        <columns>sf42_Service_Type__c</columns>
        <columns>ptt_Machine_Description__c</columns>
        <columns>ptt_Opportunity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>sf42_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2006</value>
        </filters>
        <filters>
            <field>sf42_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>12/31/2006</value>
        </filters>
        <filters>
            <field>sf42_Service_Type__c</field>
            <operation>equals</operation>
            <value>Paid Service,Free service</value>
        </filters>
        <label>2006 Services</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>USA_Service_Inc</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X2007_Services</fullName>
        <columns>sf42_Date__c</columns>
        <columns>sf42_Account__c</columns>
        <columns>NAME</columns>
        <columns>sf42_Service_Type__c</columns>
        <columns>ptt_Machine_Description__c</columns>
        <columns>ptt_Opportunity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>sf42_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2007</value>
        </filters>
        <filters>
            <field>sf42_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>12/31/2007</value>
        </filters>
        <filters>
            <field>sf42_Service_Type__c</field>
            <operation>equals</operation>
            <value>Paid Service,Free service</value>
        </filters>
        <label>2007 Services</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>USA_Service_Inc</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X2008_Demos</fullName>
        <columns>NAME</columns>
        <columns>PT_Address__c</columns>
        <columns>sf42_Account__c</columns>
        <columns>sf42_Date__c</columns>
        <columns>sf42_Engineer_1__c</columns>
        <columns>sf42_Engineer_2__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>sf42_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>12/31/2008</value>
        </filters>
        <filters>
            <field>sf42_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2008</value>
        </filters>
        <filters>
            <field>sf42_Service_Type__c</field>
            <operation>equals</operation>
            <value>Drop By,Demonstration</value>
        </filters>
        <label>2008 Demos</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>USAEmployee</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>USAManagement</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>USA_Service_Inc</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>SD# {00000}</displayFormat>
        <label>Services &amp; Demos</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Services &amp; Demos</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Service_End_Date_has_to_be_entered</fullName>
        <active>true</active>
        <description>&quot;Service End Date&quot; has to be entered when a &quot;Status&quot; is &quot;6. Completed&quot;.</description>
        <errorConditionFormula>AND( TEXT(ptt_Status__c) = &quot;6. Completed&quot;, ISBLANK(Service_End_Date__c))</errorConditionFormula>
        <errorDisplayField>Service_End_Date__c</errorDisplayField>
        <errorMessage>Enter &quot;Service End Date&quot; when Status field is &quot;Completed&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_for_Service_and_Travel_Amount</fullName>
        <active>true</active>
        <description>Service Amount and Travel Amount is  required for Paid Service for Germany BU.</description>
        <errorConditionFormula>AND(ISPICKVAL(sf42_Service_Type__c,&quot;Paid Service&quot;),Bussines_Unit__c  = &quot;Germany - CM&quot;, OR(ISBLANK( Service_Amount__c ),ISBLANK( Travel_Amount__c )))</errorConditionFormula>
        <errorDisplayField>Service_Amount__c</errorDisplayField>
        <errorMessage>Service Amount and Travel Amount is  required for Paid Service.</errorMessage>
    </validationRules>
</CustomObject>